<resources>
    <string name="app_name">Ecole list</string>
    <string name="connect">Formulaire de connexion</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="rememberme">Se souvenir de moi</string>
    <string name="empty">Vider</string>
    <string name="validate">Envoyer</string>
    <string name="title_activity_list_ecole">ListEcoleActivity</string>
    <string name="totouch">Ajouter une entrée</string>
    <string name="schoollist">Voir la liste des entrées</string>
    <string name="add_entry">Ajouter une entrée</string>
    <string name="elevenumber">%1$s élèves</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_auth">Authentification</string>
</resources>
