<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ynov.bsc.Activies.LoginActivity">

    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="95dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false" />

    <TextView
        android:id="@+id/label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_username"
        android:layout_alignStart="@+id/input_username"
        android:layout_below="@+id/input_username"
        android:layout_marginTop="17dp"
        android:text="@string/password"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/label_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_username"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/input_username"
        android:layout_marginTop="57dp"
        android:text="@string/username"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/input_rememberme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_password"
        android:layout_alignStart="@+id/input_password"
        android:layout_below="@+id/input_password"
        android:layout_marginTop="34dp"
        android:text="@string/rememberme"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/label_password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_rememberme"
        android:layout_marginTop="31dp"
        android:layout_toEndOf="@+id/btn_validate"
        android:layout_toRightOf="@+id/btn_validate"
        android:text="@string/empty" />

    <Button
        android:id="@+id/btn_validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_empty"
        android:layout_alignBottom="@+id/btn_empty"
        android:layout_alignEnd="@+id/input_rememberme"
        android:layout_alignRight="@+id/input_rememberme"
        android:text="@string/validate" />
</RelativeLayout>
